@@ -1,3 +1,7 @@
+2001-06-23  Andras Varga
+
+       	* cobject.h: cleaned up DOC++ comments
+
 2001-06-22  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
 
 	* Some fixes to errors produced by opp_docify.pl:
